--- a/.github/workflows/scans.yml
+++ b/.github/workflows/scans.yml
@@ -22,6 +22,7 @@ jobs:
         uses: "DISIC/dashlord-observatoire/actions/airtable-procedures-urls@main"
         with:
           airtable_api_key: ${{ secrets.AIRTABLE_API_KEY }}
+          jdma_api_key: ${{ secrets.JDMA_TOKEN }}
           airtable_base_id: ${{ secrets.AIRTABLE_BASE_ID }}
           airtable_procedures_table_name: ${{ secrets.AIRTABLE_TABLE_NAME }}
           airtable_editions_table_name: ${{ secrets.AIRTABLE_EDITIONS_TABLE_NAME }}
